--- a/pages/fee.html
+++ b/pages/fee.html
@@ -7,7 +7,7 @@
 	<!-- Boxicons -->
 	<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 	<!-- My CSS -->
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="../style.css">
 
 	<title>Ananda College</title>
 </head>
@@ -17,27 +17,27 @@
 	<!-- SIDEBAR -->
 	<section id="sidebar">
 		<a href="#" class="brand">
-            <img src="photo\Ananda_Crest.png" style="
+            <img src="../photo/Ananda_Crest.png" style="
                 width: 60px;
                 height: auto;">
             
 			<span class="text">Ananda College</span>
 		</a>
 		<ul class="side-menu top">
-			<li class="active">
-				<a href="#">
+			<li>
+				<a href="../index.html">
 					<i class='bx bxs-dashboard' ></i>
 					<span class="text">Dashboard</span>
 				</a>
 			</li>
 			<li>
-				<a href="./pages/students.html">
+				<a href="./students.html">
 					<i class='bx bx-user-check'></i>
 					<span class="text">Student registration</span>
 				</a>
 			</li>
-			<li>
-				<a href="./pages/fee.html">
+			<li class="active">
+				<a href="#">
 					<i class='bx bxs-doughnut-chart' ></i>
 					<span class="text">Fee Management</span>
 				</a>
@@ -105,7 +105,7 @@
 					<h1>Ananda College</h1>
 					<ul class="breadcrumb">
 						<li>
-							<a href="#">Dashboard</a>
+							<a href="#">Fee Management</a>
 						</li>
 						<li><i class='bx bx-chevron-right' ></i></li>
 						<li>
@@ -240,6 +240,6 @@
 	<!-- CONTENT -->
 	
 
-	<script src="script.js"></script>
+	<script src="../script.js"></script>
 </body>
 </html>
