Initiate registration success form

--- a/pages/registration.html
+++ b/pages/registration.html
@@ -2,7 +2,8 @@
 <html>
 <body>
 
-<h1 style="background-color:rgb(24, 149, 32);">Registration Successfully</h1>
+<h3 style="background-color:rgb(145, 248, 152);">Registration Successfully</h3>
+<h6>Ananda College Management</h6>
 
 
 
