--- a/pages/fee.html
+++ b/pages/fee.html
@@ -123,7 +123,7 @@
 			<div class="table-data">
 				<div class="order">
 					<div class="head">
-						<h3>Recent Fee Payments</h3>
+						<h3>Fee Payments Details</h3>
 						<i class='bx bx-search' ></i>
 						<i class='bx bx-filter' ></i>
 					</div>
